work done at sp exact 3